#260 : Update the script file in the corresponding module