@@ -24,10 +24,14 @@ import org.meveo.event.logging.LoggedEvent;
 import org.meveo.event.qualifier.Created;
 import org.meveo.event.qualifier.Removed;
 import org.meveo.event.qualifier.Updated;
+import org.meveo.model.ModuleItem;
 import org.meveo.model.git.GitRepository;
 import org.meveo.model.module.MeveoModule;
 import org.meveo.model.technicalservice.endpoint.Endpoint;
+import org.meveo.security.CurrentUser;
+import org.meveo.security.MeveoUser;
 import org.meveo.service.git.GitClient;
+import org.meveo.service.git.GitHelper;
 import org.meveo.service.git.MeveoRepository;
 import org.meveo.service.technicalservice.endpoint.ESGeneratorService;
 import org.meveo.service.technicalservice.endpoint.EndpointService;
@@ -45,6 +49,10 @@ import org.slf4j.Logger;
 @Lock(LockType.READ)
 public class EndpointEventListener {
 
+    @Inject
+    @CurrentUser
+    protected MeveoUser currentUser;
+    
 	@Inject
 	private Logger log;
 
@@ -70,8 +78,11 @@ public class EndpointEventListener {
 	 * @throws IOException       if file cannot be created
 	 * @throws BusinessException if the changes can't be commited
 	 */
+	@TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)
 	public File createESFile(@Observes(during = TransactionPhase.AFTER_SUCCESS) @Created Endpoint endpoint) throws IOException, BusinessException {
 
+		MeveoModule module = this.endpointService.findModuleOf(endpoint);
+		
 		List<File> filesToCommit = new ArrayList<>();
 		// check if base interface exists
 		if (!endpointService.isBaseEndpointScriptExists()) {
@@ -83,9 +94,11 @@ public class EndpointEventListener {
 		final File scriptFile = endpointService.getScriptFile(endpoint);
 		FileUtils.write(scriptFile, esGeneratorService.buildJSInterface(endpoint), StandardCharsets.UTF_8);
 		filesToCommit.add(scriptFile);
-
-		gitClient.commitFiles(meveoRepository, Collections.singletonList(scriptFile), "Create JS script for endpoint " + endpoint.getCode());
-
+		if (module != null) {
+			gitClient.commitFiles(module.getGitRepository(), Collections.singletonList(scriptFile), "Create JS script for endpoit" + endpoint.getCode());
+		} else {
+			gitClient.commitFiles(meveoRepository, Collections.singletonList(scriptFile), "Create JS script for endpoint " + endpoint.getCode());
+		}
 		return scriptFile;
 	}
 
@@ -103,18 +116,25 @@ public class EndpointEventListener {
 	public File updateESFile(@Observes(during = TransactionPhase.AFTER_SUCCESS) @Updated Endpoint endpoint) throws IOException, BusinessException {
 
 		MeveoModule module = this.endpointService.findModuleOf(endpoint);
-		//TODO remove this condition with the default meveo module
-		if(module != null) {
-			this.endpointService.removeFilesFromModule(endpoint, module);
-			this.endpointService.addFilesToModule(endpoint, module);
-		}
+		
 		log.debug("[CDI event] on update es file with id={}", endpoint.getId());
 		final File scriptFile = endpointService.getScriptFile(endpoint);
 		String updatedScript = esGeneratorService.buildJSInterface(endpoint);
-
+		
 		if (!scriptFile.exists() || !FileUtils.readFileToString(scriptFile).equals(updatedScript)) {
 			FileUtils.write(scriptFile, updatedScript);
-			gitClient.commitFiles(meveoRepository, Collections.singletonList(scriptFile), "Update JS script for endpoint " + endpoint.getCode());
+			if (module != null) {
+				File endpointInterface = endpointService.getBaseScriptFile();
+				File gitDirectory = GitHelper.getRepositoryDir(currentUser, module.getGitRepository().getCode());
+				String pathEndpointInterface = endpoint.getClass().getAnnotation(ModuleItem.class).path() + "/" + endpoint.getCode() + "/" + "/EndpointInterface.js";
+				File fileEndpointInterface = new File (gitDirectory, pathEndpointInterface);
+				if (!fileEndpointInterface.exists()) {
+					FileUtils.copyFile(endpointInterface, fileEndpointInterface);
+				}
+				gitClient.commitFiles(module.getGitRepository(), List.of(scriptFile, fileEndpointInterface), "Update JS script for endpoint " + endpoint.getCode());
+			} else {
+				gitClient.commitFiles(meveoRepository, Collections.singletonList(scriptFile), "Update JS script for endpoit " + endpoint.getCode());
+			}
 		}
 
 		return scriptFile;
@@ -128,17 +148,25 @@ public class EndpointEventListener {
 	 * @return the result of {@link File#delete()} called on the script file
 	 * @throws BusinessException if the changes can't be commited
 	 */
+	@TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)
 	public boolean removeESFile(@Observes(during = TransactionPhase.AFTER_SUCCESS) @Removed Endpoint endpoint)
 			throws BusinessException {
 
+		MeveoModule module = this.endpointService.findModuleOf(endpoint);
+		
 		File scriptFile = endpointService.getScriptFile(endpoint);
 		boolean flag = true;
 		if (scriptFile != null) {
 			File parentDir = scriptFile.getParentFile();
 			flag = scriptFile.delete();
 			parentDir.delete();
-			gitClient.commitFiles(meveoRepository, Arrays.asList(scriptFile, parentDir),
+			if (module != null) {
+				gitClient.commitFiles(module.getGitRepository(), Arrays.asList(scriptFile, parentDir), 
 					"Delete JS dir and script for endpoint " + endpoint.getCode());
+			} else {
+				gitClient.commitFiles(meveoRepository, Arrays.asList(scriptFile, parentDir),
+					"Delete JS dir and script for endpoint " + endpoint.getCode());
+			}
 		}
 
 		return flag;
